F! - add rotating frames

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/L_MainMenu.L_MainMenu
-EditorStartupMap=/Game/Levels/L_Map1.L_Map1
+EditorStartupMap=/Game/Levels/L_BullyGuy.L_BullyGuy
 GameInstanceClass=/Game/SP_GameInstance.SP_GameInstance_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
