--- a/Stringer.uproject
+++ b/Stringer.uproject
@@ -22,6 +22,10 @@
 		{
 			"Name": "GameplayBehaviorSmartObjects",
 			"Enabled": true
+		},
+		{
+			"Name": "HairStrands",
+			"Enabled": true
 		}
 	]
 }
