--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Shitty shit
+Content/Characters/*
+Content/ThirdPerson/*
+Content/LevelPrototyping/*
+Content/MetaHumans/*
+Content/__ExternalActors__/*
+Content/__ExternalObjects__/*
+
 # Visual Studio 2015 user specific files
 .vs/
 
